// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`genericity + the resolved style tree (snapshots committed) resolved Unistyles recipe — Button (lilac/light) 1`] = `
{
  "label": {
    "base": {},
    "compoundVariants": [],
    "el": "text",
    "typeStep": {
      "variants": {
        "size": {
          "lg": "mdEm",
          "md": "mdEm",
          "sm": "smEm",
        },
      },
    },
    "variants": {},
  },
  "root": {
    "base": {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    },
    "compoundVariants": [
      {
        "pressed": true,
        "styles": {
          "backgroundColor": "#b39ff3",
        },
        "variant": "solid",
      },
      {
        "pressed": true,
        "styles": {
          "backgroundColor": "#ece9da",
        },
        "variant": "soft",
      },
      {
        "pressed": true,
        "styles": {
          "backgroundColor": "#fbf9ee",
        },
        "variant": "ghost",
      },
      {
        "pressed": true,
        "styles": {
          "transform": [
            {
              "scale": 0.97,
            },
          ],
        },
      },
      {
        "disabled": true,
        "styles": {
          "opacity": 0.4,
        },
      },
    ],
    "el": "view",
    "foreground": {
      "variants": {
        "variant": {
          "ghost": "#222013",
          "soft": "#222013",
          "solid": "#381b6a",
        },
      },
    },
    "variants": {
      "size": {
        "lg": {
          "borderRadius": 12,
          "minHeight": 60,
          "paddingHorizontal": 24,
        },
        "md": {
          "borderRadius": 6,
          "minHeight": 48,
          "paddingHorizontal": 18,
        },
        "sm": {
          "borderRadius": 6,
          "minHeight": 36,
          "paddingHorizontal": 12,
        },
      },
      "variant": {
        "ghost": {
          "backgroundColor": "transparent",
        },
        "soft": {
          "backgroundColor": "#f3f1e2",
        },
        "solid": {
          "backgroundColor": "#beaaff",
        },
      },
    },
  },
}
`;

exports[`genericity + the resolved style tree (snapshots committed) resolved Unistyles recipe — Button (neutral/dark · accent×mode) 1`] = `
{
  "label": {
    "base": {},
    "compoundVariants": [],
    "el": "text",
    "typeStep": {
      "variants": {
        "size": {
          "lg": "mdEm",
          "md": "mdEm",
          "sm": "smEm",
        },
      },
    },
    "variants": {},
  },
  "root": {
    "base": {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    },
    "compoundVariants": [
      {
        "pressed": true,
        "styles": {
          "backgroundColor": "#f3f1e2",
        },
        "variant": "solid",
      },
      {
        "pressed": true,
        "styles": {
          "backgroundColor": "#2c2a1e",
        },
        "variant": "soft",
      },
      {
        "pressed": true,
        "styles": {
          "backgroundColor": "#1a1913",
        },
        "variant": "ghost",
      },
      {
        "pressed": true,
        "styles": {
          "transform": [
            {
              "scale": 0.97,
            },
          ],
        },
      },
      {
        "disabled": true,
        "styles": {
          "opacity": 0.4,
        },
      },
    ],
    "el": "view",
    "foreground": {
      "variants": {
        "variant": {
          "ghost": "#f0eee3",
          "soft": "#f0eee3",
          "solid": "#222013",
        },
      },
    },
    "variants": {
      "size": {
        "lg": {
          "borderRadius": 12,
          "minHeight": 60,
          "paddingHorizontal": 24,
        },
        "md": {
          "borderRadius": 6,
          "minHeight": 48,
          "paddingHorizontal": 18,
        },
        "sm": {
          "borderRadius": 6,
          "minHeight": 36,
          "paddingHorizontal": 12,
        },
      },
      "variant": {
        "ghost": {
          "backgroundColor": "transparent",
        },
        "soft": {
          "backgroundColor": "#242319",
        },
        "solid": {
          "backgroundColor": "#fffdf2",
        },
      },
    },
  },
}
`;

exports[`genericity + the resolved style tree (snapshots committed) resolved Unistyles recipe — IconAvatar (lilac/light) 1`] = `
{
  "icon": {
    "base": {},
    "compoundVariants": [],
    "el": "icon",
    "variants": {},
  },
  "root": {
    "base": {
      "alignItems": "center",
      "borderRadius": 9999,
      "height": 48,
      "justifyContent": "center",
      "width": 48,
    },
    "compoundVariants": [],
    "el": "view",
    "foreground": {
      "variants": {
        "variant": {
          "ghost": "#222013",
          "soft": "#222013",
          "solid": "#381b6a",
          "subtle": "#bfbcac",
        },
      },
    },
    "variants": {
      "variant": {
        "ghost": {
          "backgroundColor": "transparent",
        },
        "soft": {
          "backgroundColor": "#f3f1e2",
        },
        "solid": {
          "backgroundColor": "#beaaff",
        },
      },
    },
  },
}
`;

exports[`genericity + the resolved style tree (snapshots committed) resolved Unistyles recipe — Topbar (lilac/light) 1`] = `
{
  "content": {
    "base": {
      "flexGrow": 1,
      "flexShrink": 1,
      "minWidth": 0,
    },
    "compoundVariants": [],
    "el": "view",
    "variants": {
      "center": {
        "true": {
          "alignItems": "center",
          "justifyContent": "center",
        },
      },
    },
  },
  "root": {
    "base": {
      "alignItems": "center",
      "backgroundColor": "#fffdf2",
      "flexDirection": "row",
      "gap": 6,
      "height": 48,
      "paddingEnd": 18,
      "paddingStart": 18,
    },
    "compoundVariants": [],
    "el": "view",
    "foreground": {
      "base": "#222013",
    },
    "open": true,
    "variants": {},
  },
}
`;
